--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <ul>
 <li><a href="https://ligzerrr.github.io/game1/">Minecraft</a></li>
 <li><a href="https://brahhhh333.github.io/games/">The Witcher 3</a></li>
-<li><a href="gamee3.md">Counter Strike 2</a></li>
+<li><a href="gamee3.html">Counter Strike 2</a></li>
 </ul>
